Switch to goapi-gen, add login & signup endpoints
